# soxt

./: .cvsignore  .gitmodules  .hgsub  .hgsubstate  AUTHORS  BUGS.txt  CMakeLists.txt  COPYING  ChangeLog  ChangeLog.sh  HACKING  Info.plist.in  Makefile.am  Makefile.in  NEWS  README  SoXt-1.tag  SoXt.pc.cmake.in  SoXt.pc.in  SoXtBasic_8h_source.html  SoXtComponent_8h_source.html  SoXtConstrainedViewer_8h_source.html  SoXtCursor_8h_source.html  SoXtDevice_8h_source.html  SoXtExaminerViewer_8h_source.html  SoXtFlyViewer_8h_source.html  SoXtFullViewer_8h_source.html  SoXtGLWidget_8h_source.html  SoXtKeyboard_8h_source.html  SoXtMouse_8h_source.html  SoXtObject_8h_source.html  SoXtPlaneViewer_8h_source.html  SoXtRenderArea_8h_source.html  SoXtViewer_8h_source.html  SoXt_8h_source.html  TODO  acconfig.h  aclocal.m4  annotated.html  annotated_dup.js  (+149 more)
.github/workflows/: codeql.yml  continuous-integration-workflow.yml  documentation-workflow.yml
cfg/: ltmain.sh
docs/: ChangeLog.v1.1.0  ChangeLog.v1.2.0  ChangeLog.v1.2.1  ChangeLog.v1.2.2  ChangeLog.v1.3.0  ChangeLog.v1.4.0  ChangeLog.v1.4.1  ChangeLog.v1.4.2  Makefile.in  XtAppSetExitFlag  announcement-1_1_0.txt  announcement-1_2_0.txt  announcement-1_2_1.txt  announcement-1_2_2.txt  announcement-1_3_0.txt  index.html  soxt.doxygen.in  spaceball
html/: Makefile.am  Makefile.in
man/: Makefile.in
man/man1/: Makefile.am  Makefile.in
man/man3/: Makefile.am  Makefile.in
packaging/: description-summary.txt
packaging/macosx/: Welcome.rtf
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  (+38 more)
src/: CMakeLists.txt  Makefile.am  Makefile.in  config.h.cmake.in  config.h.in
src/Inventor/: Makefile.am  Makefile.in
src/Inventor/Xt/: .exrc  Makefile.am  Makefile.in  Makefile.in.diff  SoXt.cpp  SoXt.h  SoXtClipboard.cpp  SoXtClipboard.h  SoXtColorEditor.h  SoXtComponent.cpp  SoXtComponent.h  SoXtComponentP.h  SoXtCursors.cpp  SoXtCursors.h  SoXtDirectionalLightEditor.cpp  SoXtDirectionalLightEditor.h  SoXtGLWidget.cpp  SoXtGLWidget.h  SoXtGLWidgetP.h  SoXtIcons.cpp  SoXtIcons.h  SoXtInternal.cpp  SoXtInternal.h  SoXtLightSliderSet.cpp  SoXtLightSliderSet.h  SoXtMaterialEditor.cpp  SoXtMaterialEditor.h  SoXtMaterialList.cpp  SoXtMaterialList.h  SoXtMaterialListBuiltins.cpp  SoXtMaterialListBuiltins.cpp.m4  SoXtMaterialSliderSet.cpp  SoXtMaterialSliderSet.h  SoXtObject.cpp  SoXtObject.h  SoXtPrintDialog.cpp  SoXtPrintDialog.h  SoXtRenderArea.cpp  SoXtRenderArea.h  SoXtRenderAreaExtra.cpp  (+12 more)
src/Inventor/Xt/devices/: .exrc  6DOFEvents.h  Makefile.am  Makefile.in  SoXtDevice.cpp  SoXtDevice.h  SoXtDeviceP.h  SoXtInputFocus.cpp  SoXtInputFocus.h  SoXtKeyboard.cpp  SoXtKeyboard.h  SoXtLinuxJoystick.cpp  SoXtLinuxJoystick.h  SoXtMouse.cpp  SoXtMouse.h  SoXtSpaceball.cpp  SoXtSpaceball.h  SoXtSpaceballP.h  all-devices-cpp.cpp  soxtdevices-all-cpp.cpp
src/Inventor/Xt/editors/: Makefile.am  Makefile.in  all-editors-cpp.cpp
src/Inventor/Xt/engines/: Makefile.am  Makefile.in  all-engines-cpp.cpp
src/Inventor/Xt/nodes/: Makefile.am  Makefile.in  all-nodes-cpp.cpp
src/Inventor/Xt/sliders/: Makefile.am  Makefile.in  SoXtAmbientColorSliderModule.cpp  SoXtAmbientColorSliderModule.h  SoXtCenterSliderModule.cpp  SoXtCenterSliderModule.h  SoXtDiffuseColorSliderModule.cpp  SoXtDiffuseColorSliderModule.h  SoXtEmissiveColorSliderModule.cpp  SoXtEmissiveColorSliderModule.h  SoXtLightColorSliderModule.cpp  SoXtLightColorSliderModule.h  SoXtLightIntensitySliderModule.cpp  SoXtLightIntensitySliderModule.h  SoXtRotateSliderModule.cpp  SoXtRotateSliderModule.h  SoXtScaleSliderModule.cpp  SoXtScaleSliderModule.h  SoXtShininessSliderModule.cpp  SoXtShininessSliderModule.h  SoXtSliderSetModule.cpp  SoXtSliderSetModule.h  SoXtSpecularColorSliderModule.cpp  SoXtSpecularColorSliderModule.h  SoXtTranslateSliderModule.cpp  SoXtTranslateSliderModule.h  SoXtTransparencySliderModule.cpp  SoXtTransparencySliderModule.h
src/Inventor/Xt/viewers/: .exrc  ExaminerViewer.cpp  FullViewer.cpp  Makefile.am  Makefile.in  Makefile.in.diff  PlaneViewer.cpp  SoNativeFlyViewer.cpp  SoXtCollisionViewer.cpp  SoXtCollisionViewer.h  SoXtConstrainedViewer.cpp  SoXtConstrainedViewer.h  SoXtExaminerViewer.cpp  SoXtExaminerViewer.h  SoXtExaminerViewerP.h  SoXtFlyViewer.cpp  SoXtFlyViewer.h  SoXtFullViewer.cpp  SoXtFullViewer.h  SoXtFullViewerP.h  SoXtPlaneViewer.cpp  SoXtPlaneViewer.h  SoXtPlaneViewerP.h  SoXtViewerExtra.cpp  SoXtWalkViewer.cpp  SoXtWalkViewer.h  WalkViewer.cpp  all-viewers-cpp.cpp  killed-prefs.diff  soxtexaminerviewer.scm
src/Inventor/Xt/widgets/: Makefile.am  Makefile.in  SoXtGLArea.README  SoXtGLArea.cpp  SoXtGLArea.h  SoXtGLAreaP.h  SoXtPopupMenu.cpp  SoXtPopupMenu.h  SoXtSlider.cpp  SoXtSlider.h  SoXtThumbWheel.cpp  SoXtThumbWheel.h  SoXtThumbWheelP.h  XtNativePopupMenu.cpp  XtNativePopupMenu.h  all-widgets-cpp.cpp
src/Inventor/Xt/widgets/compound/: Makefile.am  Makefile.in  SoXtSlider.cpp  SoXtSlider.h  SoXtSliderManager.cpp  SoXtSliderManager.h
test-code/: CMakeLists.txt  Makefile.am  Makefile.in  button.cpp  coloreditor.cpp  examinerviewer.cpp  initalfullscreen.cpp  initialpos.c  materialeditor.cpp
test-code/bugs/: Makefile.am  Makefile.in  sensor.cpp
test-code/components/: Makefile.am  Makefile.in  computils.cpp  computils.h  planeviewer.cpp
test-code/widgets/: Makefile.in
